<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_bottom_margin"
        android:paddingTop="60dp"
        tools:context="justbe.mindfulness.PreferencesActivity"
        tools:showIn="@layout/activity_preferences">

        <TableLayout
            android:id="@+id/preferencesTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/currentUsernameRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="false">

                <TextView
                    android:id="@+id/currentUsernameText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/username_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/currentUsername"
                    android:layout_width="fill_parent"
                    android:layout_marginEnd="5dp"
                    android:width="0dp"
                    android:background="@color/bpTransparent"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/currentFirstnameRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="false">

                <TextView
                    android:id="@+id/currentFirstnameText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/first_name_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/currentFirstname"
                    android:layout_width="fill_parent"
                    android:layout_marginEnd="5dp"
                    android:width="0dp"
                    android:background="@color/bpTransparent"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/currentLastnameRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="false">

                <TextView
                    android:id="@+id/currentLastnameText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/last_name_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/currentLastname"
                    android:layout_width="fill_parent"
                    android:layout_marginEnd="5dp"
                    android:width="0dp"
                    android:background="@color/bpTransparent"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/currentGenderRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="false">

                <TextView
                    android:id="@+id/currentGenderText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/gender_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/currentGender"
                    android:layout_width="fill_parent"
                    android:layout_marginEnd="5dp"
                    android:width="0dp"
                    android:background="@color/bpTransparent"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/currentResearchStudyRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="false">

                <TextView
                    android:id="@+id/currentResearchStudyText"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:text="@string/research_study_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/currentResearchStudy"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:width="0dp"
                    android:background="@color/bpTransparent"
                    android:gravity="end"
                    android:padding="10dp"
                    android:text="No"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/meditationRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/meditationTimeText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/meditations_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/meditationTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/lessons_dayRow"
                android:background="@drawable/clickable_table_row_selector">

                <TextView
                    android:id="@+id/lessons_day_Text"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/lessons_day_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/days_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/lessonRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/lessonTimeText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/lessons_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/lessonTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/wakeUpRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/wakeUpText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/wake_up_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/wakeUpTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/goToSleepRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/goToSleepText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/go_to_sleep_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/goToSleepTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>

            <TableRow
                android:id="@+id/logOutRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="logout">

                <TextView
                    android:id="@+id/logOut"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/log_out_text"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp">

                <View style="@style/Divider" />
            </LinearLayout>
        </TableLayout>

    </LinearLayout>
</ScrollView>
