...
    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="pleaseLogin">Please Login back</string>
    <string name="create_account_button">Sign up</string>
    <string name="next_button">Next</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_sleep_time">Sleep Timings</string>
    <string name="title_activity_lesson_time">Lesson Timings</string>
    <string name="title_activity_meditation_time">Meditation Timings</string>
    <string name="title_activity_getting_started">Getting Started</string>
    <string name="title_activity_response">Storing Responses</string>
    <string name="title_activity_research">Research Study</string>
...
    <string name="setup">Setup</string>
    <string name="pendingMorning">Pending Morning Assessment</string>
    <string name="pendingAfternoon">Pending Afternoon Assessment</string>
    <string name="timeForAssessment">It\'s time for a momentary evaluation!</string>
    <string name="readyToStartAssesssment">Are you ready to start the assessment?</string>

    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="confim_password_text">Confirm Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confim_new_password_text">Confirm New Password</string>
    <string name="email_text">Email</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="birthday_text">Birthday</string>
...
    <string name="other_text">Other</string>
    <string name="wake_up_text">I wake up at </string>
    <string name="go_to_sleep_text">I go to sleep at </string>
    <string name="wake_up_text_create_account">What time do you usually wake up in the morning?</string>
    <string name="go_to_sleep_text_create_account">What time do you usually go to sleep daily?</string>
    <string name="change_password_text">Change Password</string>
    <string name="log_out_text">Log Out</string>
    <string name="loggingIn">Logging In</string>
    <string name="creatingAccount">Creating Account</string>
    <string name="storingResponses">Storing Responses</string>
    <string name="loggingOut">Logging Out</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="resarch_study">Are you part of the research study?</string>
    <string name="resarch_study_info">Note: \nIf you choose to be part of research study, only then you will be receiving notifications for Daily Assessments.</string>


    <string name="title_activity_preferences">Preferences</string>
    <string name="meditations_text">Meditation Time</string>
    <string name="meditation">Meditation</string>>
    <string name="lessons_text">Lessons Time</string>
    <string name="lessons_day_text">Lessons Day</string>
    <string name="meditations_text_create_account">What time do you want to meditate daily?</string>
    <string name="lessons_text_create_account">What time on that day would you like to receive the lesson?</string>
    <string name="lessons_day_text_create_account">What day would you like to receive your weekly lesson?</string>

...
