...
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            app:counterEnabled="true"
            app:counterMaxLength="16">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:hint="@string/username_text"
                android:imeOptions="flagNoExtractUi"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_text"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/confim_password_text"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
...
                android:onClick="onResearchStudyButtonClicked"
                android:text="@string/no" />

        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="24dp"
            android:onClick="createAccountPressed"
            android:padding="12dp"
...
