...
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginPressed"
            android:text="@string/login_button" />

        <TextView
...
